mvc_macro_lib/tests/should_fail/macro_fail_on_empty_test.rs
use rusthtml_macro;

rusthtml_view_macro! {}